refactor: put DataAddress as Asset field (#3244)